--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Telegram User Credentials</title>
+  <title>Telegram WebApp Data</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     body {
@@ -22,106 +22,37 @@
     .container h2 {
       margin-bottom: 16px;
     }
-    .field {
-      margin-bottom: 12px;
-    }
-    .field span {
-      font-weight: bold;
-    }
-    .photo-url {
-      word-wrap: break-word;
+    pre {
+      background: #f8f8f8;
+      padding: 16px;
+      border-radius: 8px;
       white-space: pre-wrap;
-    }
-    .verified {
-      margin-top: 20px;
-      padding: 10px;
-      font-weight: bold;
-      border-radius: 6px;
-    }
-    .verified.ok {
-      background: #d4edda;
-      color: #155724;
-    }
-    .verified.fail {
-      background: #f8d7da;
-      color: #721c24;
-    }
-    #debug-info {
-      margin-top: 20px;
-      background-color: #f1f1f1;
-      padding: 10px;
-      border-radius: 5px;
-      font-size: 14px;
+      word-wrap: break-word;
     }
   </style>
 </head>
 <body>
   <div class="container" id="user-container">
-    <h2>User Credentials</h2>
-    <div id="fields">Loading...</div>
-    <div id="verification" class="verified"></div>
-  </div>
-
-  <div id="debug-info">
-    <h3>Debug Information</h3>
-    <pre id="checkString">Check String: Loading...</pre>
-    <pre id="generatedHash">Generated Hash: Loading...</pre>
+    <h2>Telegram WebApp Data</h2>
+    <pre id="json-output">Loading...</pre>
   </div>
 
   <script>
-    window.addEventListener("DOMContentLoaded", async () => {
+    window.addEventListener("DOMContentLoaded", () => {
       const tg = window.Telegram.WebApp;
-      const user = tg.initDataUnsafe.user;
-      const initData = tg.initData || '';
-      const hashFromInitData = tg.initDataUnsafe.hash;
 
-      const botToken = '8163248824:AAHcAR8vllK0hgGoXNvIVfDQbeBV0m3eOx8'; // ⚠️ Никогда не делай так в проде
+      // Делаем проверку, что Telegram данные доступны
+      if (!tg || !tg.initDataUnsafe) {
+        document.getElementById('json-output').textContent = 'No Telegram data available.';
+        return;
+      }
 
-      const authDate = Math.floor(Date.now() / 1000);
+      // Преобразуем initDataUnsafe в JSON строку и выводим
+      const data = tg.initDataUnsafe;
 
-      const data = {
-        id: user?.id,
-        first_name: user?.first_name || '',
-        last_name: user?.last_name || '',
-        username: user?.username || '',
-        photo_url: user?.photo_url || '',
-        auth_date: user?.auth_date || authDate,
-        hash: hashFromInitData || '(hash missing)'
-      };
-
-      document.getElementById('fields').innerHTML = `
-        <div class="field"><span>ID:</span> ${data.id}</div>
-        <div class="field"><span>First Name:</span> ${data.first_name}</div>
-        <div class="field"><span>Last Name:</span> ${data.last_name}</div>
-        <div class="field"><span>Username:</span> ${data.username}</div>
-        <div class="field"><span>Auth Date:</span> ${data.auth_date}</div>
-        <div class="field"><span>Hash:</span> ${data.hash}</div>
-        ${data.photo_url ? `<div class="field"><span>Photo URL:</span><div class="photo-url">${data.photo_url}</div></div>` : ''}
-      `;
-
-      const isValid = await verifyTelegramData(initData, hashFromInitData, botToken);
-      const verificationEl = document.getElementById('verification');
-      verificationEl.textContent = isValid ? '✅ Пользователь верифицирован' : '❌ Верификация не пройдена';
-      verificationEl.className = 'verified ' + (isValid ? 'ok' : 'fail');
+      // Выводим данные в виде JSON
+      document.getElementById('json-output').textContent = JSON.stringify(data, null, 2);
     });
-
-    async function verifyTelegramData(initData, receivedHash, botToken) {
-      const encoder = new TextEncoder();
-      const checkString = initData.split('&').filter(p => !p.startsWith('hash=')).sort().join('\n');
-
-      // Выводим строку и сгенерированный хеш на страницу
-      document.getElementById('checkString').textContent = 'Check String: ' + checkString;
-
-      const key = await window.crypto.subtle.digest("SHA-256", encoder.encode(botToken));
-      const secretKey = await window.crypto.subtle.importKey("raw", key, { name: "HMAC", hash: "SHA-256" }, false, ["sign"]);
-      const signature = await window.crypto.subtle.sign("HMAC", secretKey, encoder.encode(checkString));
-      const hex = Array.from(new Uint8Array(signature)).map(b => b.toString(16).padStart(2, '0')).join('');
-
-      // Выводим сгенерированный хеш на страницу
-      document.getElementById('generatedHash').textContent = 'Generated Hash: ' + hex;
-
-      return hex === receivedHash;
-    }
   </script>
 </body>
 </html>
